@@ -93,46 +93,6 @@ static void butterfly_vfy_cmd_sent(PROGRAMMER * pgm, char * errmsg)
 }
 
 
-static int butterfly_rdy_led(PROGRAMMER * pgm, int value)
-{
-  no_show_func_info();
-
-  /* Do nothing. */
-
-  return 0;
-}
-
-
-static int butterfly_err_led(PROGRAMMER * pgm, int value)
-{
-  no_show_func_info();
-
-  /* Do nothing. */
-
-  return 0;
-}
-
-
-static int butterfly_pgm_led(PROGRAMMER * pgm, int value)
-{
-  no_show_func_info();
-
-  /* Do nothing. */
-
-  return 0;
-}
-
-
-static int butterfly_vfy_led(PROGRAMMER * pgm, int value)
-{
-  no_show_func_info();
-
-  /* Do nothing. */
-
-  return 0;
-}
-
-
 /*
  * issue the 'chip erase' command to the butterfly board
  */
@@ -171,31 +131,6 @@ static int butterfly_program_enable(PROGRAMMER * pgm, AVRPART * p)
   return -1;
 }
 
-
-/*
- * apply power to the AVR processor
- */
-static void butterfly_powerup(PROGRAMMER * pgm)
-{
-  no_show_func_info();
-
-  /* Do nothing. */
-
-  return;
-}
-
-
-/*
- * remove power from the AVR processor
- */
-static void butterfly_powerdown(PROGRAMMER * pgm)
-{
-  no_show_func_info();
-
-  /* Do nothing. */
-
-  return;
-}
 
 
 /*
@@ -591,16 +526,10 @@ void butterfly_initpgm(PROGRAMMER * pgm)
   /*
    * mandatory functions
    */
-  pgm->rdy_led        = butterfly_rdy_led;
-  pgm->err_led        = butterfly_err_led;
-  pgm->pgm_led        = butterfly_pgm_led;
-  pgm->vfy_led        = butterfly_vfy_led;
   pgm->initialize     = butterfly_initialize;
   pgm->display        = butterfly_display;
   pgm->enable         = butterfly_enable;
   pgm->disable        = butterfly_disable;
-  pgm->powerup        = butterfly_powerup;
-  pgm->powerdown      = butterfly_powerdown;
   pgm->program_enable = butterfly_program_enable;
   pgm->chip_erase     = butterfly_chip_erase;
 /*  pgm->cmd		not supported, use default error message */
